Updated with various fixes and enhancements
git-svn-id: http://172.16.1.10/svn/GoCode@2 e9f2e3e8-068c-2e40-92c8-8fb97b6b8597

--- a/filecrc/config.json
+++ b/filecrc/config.json
@@ -1,8 +1,8 @@
 {
-    "rootdir"   : "/Development/Rotary_CURRENT",
-    "zipname"   : "filesinfo.zip",
-    "filename"  : "stats.txt",
-    "password"  : "dacdbrocks",
+    "rootdirs"   : ["c:/Development/DACdbAPI/APIProd", "c:/Development/DACdbAPI/APITest"],
+    "zipname"   : "dacdbfiles.zip",
+    "filename"  : "dacdbfiles.txt",
+    "password"  : "",
     "exclude"   : [".svn"],
     "sendmail"  : true,
     "email"     : 
@@ -17,5 +17,5 @@
                     "subject"   : "Filecrc generation status",
                     "attach"    : ["zip", "log"]
                 },
-    "logfile" : "filecrc.log"
+    "logfile" : "dacdbfiles.log"
 }
