Updated to ignore invalid directories
git-svn-id: http://172.16.1.10/svn/GoCode@5 e9f2e3e8-068c-2e40-92c8-8fb97b6b8597

--- a/findtype/typeconfig.json
+++ b/findtype/typeconfig.json
@@ -1,7 +1,8 @@
 {
-    "rootdirs"    : ["c:/ColdFusion2018", "C:/ColdFusion2018APIManager"],
+    "rootdirs"    : ["c:/"],
     "extensions"  : ["php", "exe", "bat", "cmd"],
-    "sendmail"    : true,
+    "sendmail"    : false,
+    "lognames"    : false,
     "logfile"     : "file_extensions.log",
     "email"       : 
     {
