--- a/cfxref/config.json
+++ b/cfxref/config.json
@@ -1,7 +1,7 @@
 {
     "verbose"   : false,
-    "webroot"   : "c:/Development/Rotary_CURRENT",
-    "paths"     : ["/CFC", "/CFC2"],
+    "webroot"   : "c:/Development/DACdbAPI/APITest",
+    "paths"     : ["/CFC", "/dacdb"],
     "vars"      : {
                     "APPLICATION.DIR":"/", 
                     "APPLICATION.SITECFCDIRECTORY":"/CFC/"},
