Optionally use godirwalk instead of filepath for perf improvements and to display memory usage stats
git-svn-id: http://172.16.1.10/svn/GoCode@15 e9f2e3e8-068c-2e40-92c8-8fb97b6b8597

--- a/filecrc/config.json
+++ b/filecrc/config.json
@@ -1,10 +1,11 @@
 {
-    "rootdirs"   : ["c:/Development/DACdbAPI/APIProd", "c:/Development/DACdbAPI/APITest"],
+    "rootdirs"   : ["c:/Development/Projects"],
     "zipname"   : "dacdbfiles.zip",
     "filename"  : "dacdbfiles.txt",
     "password"  : "",
     "exclude"   : [".svn"],
-    "sendmail"  : true,
+    "sendmail"  : false,
+    "logfile" : "dacdbfiles.log",
     "email"     : 
                 {
                     "server"    : "mail.dacdb.net",
@@ -17,5 +18,9 @@
                     "subject"   : "Filecrc generation status",
                     "attach"    : ["zip", "log"]
                 },
-    "logfile" : "dacdbfiles.log"
+    "debug"     : 
+                {
+                    "stats"     : true,
+                    "method"    : "godirwalk"
+                }
 }
