Updates for minor fixes
git-svn-id: http://172.16.1.10/svn/GoCode@20 e9f2e3e8-068c-2e40-92c8-8fb97b6b8597

--- a/filecrc/analyzefiles/config.json
+++ b/filecrc/analyzefiles/config.json
@@ -2,9 +2,10 @@
     "rootdirs"  : ["testfiles"],
     "zipname"   : "dacdbfiles.zip",
     "filename"  : "dacdbfiles.txt",
+    "hostname"  : "MyLaptop",
     "password"  : "",
     "exclude"   : [".svn", "ignoreme"],
-    "sendmail"  : false,
+    "sendmail"  : true,
     "logfile"   : "dacdbfiles.log",
     "email"     : 
                 {
