Turn off email for testing
git-svn-id: http://172.16.1.10/svn/GoCode@28 e9f2e3e8-068c-2e40-92c8-8fb97b6b8597

--- a/filecrc/analyzefiles/config.json
+++ b/filecrc/analyzefiles/config.json
@@ -5,7 +5,7 @@
     "hostname"  : "MyLaptop",
     "password"  : "",
     "exclude"   : [".svn", "ignoreme"],
-    "sendmail"  : true,
+    "sendmail"  : false,
     "logfile"   : "dacdbfiles.log",
     "email"     : 
                 {
