Send test email to dacdb only when validating config. Rebuild executables
git-svn-id: http://172.16.1.10/svn/GoCode@34 e9f2e3e8-068c-2e40-92c8-8fb97b6b8597

--- a/filecrc/analyzefiles/config.json
+++ b/filecrc/analyzefiles/config.json
@@ -5,7 +5,7 @@
     "hostname"  : "MyLaptop",
     "password"  : "",
     "exclude"   : [".svn", "ignoreme"],
-    "sendmail"  : false,
+    "sendmail"  : true,
     "logfile"   : "dacdbfiles.log",
     "email"     : 
                 {
@@ -14,7 +14,7 @@
                     "user"      : "talend@dacdb.com",
                     "code"      : "bkV8yta7v2X",
                     "from"      : "talend@dacdb.com",
-                    "to"        : ["peter@dacdb.com"],
+                    "to"        : ["peter@silvergatepartners.com"],
                     "cc"        : [],
                     "attach"    : ["zip", "log"]
                 }
